# core

./: .gitignore  CMakeLists.txt  README.md
include/: arena.h  array.h  hex.h  network.h  sstring.h
src/: arena.c  array.c  array.h  hex.c  network.c  sstring.c  sstring.h
